# fun_bot

./: README.md  pyproject.toml
fun_bot/: __main__.py  bot.py
fun_bot/constants/: environment.py
fun_bot/exts/: voice.py
fun_bot/utils/: environment.py  extension.py  voice.py
tests/: test_fun_bot.py
